完成首页的限号，油价和油价列表，处理indexpage的onshow时加载数据

--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "pages/news/news",
     "pages/tools/tools",
     "pages/my/my",
+    "pages/oil/oil",
     "pages/logs/logs"
   ],
   "window":{
