完成历史上的今天布局

--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "pages/tools/tools",
     "pages/my/my",
     "pages/oil/oil",
+    "pages/history/history",
     "pages/logs/logs"
   ],
   "window":{
