--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "pages/my/my",
     "pages/oil/oil",
     "pages/history/history",
+    "pages/historydetail/historydetail",
     "pages/logs/logs"
   ],
   "window":{
