--- a/project.config.json
+++ b/project.config.json
@@ -19,6 +19,7 @@
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
+		"compileHotReLoad": false,
 		"babelSetting": {
 			"ignore": [],
 			"disablePlugins": [],
@@ -27,7 +28,7 @@
 		"useIsolateContext": true,
 		"useCompilerModule": true,
 		"userConfirmedUseCompilerModuleSwitch": false,
-		"compileHotReLoad": false
+		"bundle": true
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.11.2",
