完成工具的分包开发，完成火星字转换和周公解梦的功能

--- a/app.json
+++ b/app.json
@@ -18,11 +18,12 @@
     }
   ],
   "preloadRule": {
-    "pages/index/index": {
+    "pages/loadingpage/loadingpage": {
       "network": "all",
       "packages": ["toolspackage"]
     }
   },
+  "lazyCodeLoading": "requiredComponents",
   "window":{
     "backgroundTextStyle":"@backgroundTextStyle",
     "navigationBarBackgroundColor": "@navigationBarBackgroundColor",
